--- a/Lessons/src/social_network/src/main/resources/application.properties
+++ b/Lessons/src/social_network/src/main/resources/application.properties
@@ -12,10 +12,11 @@ spring.datasource.password=98765
 spring.jpa.generate-ddl=false
 
 spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 # create
 # none
 # update
 
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.id.new_generator_mappings=true
+        
