Добавлено: Создание сообщения (полурабочее)

--- a/Lessons/src/social_network/src/main/resources/application.properties
+++ b/Lessons/src/social_network/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.datasource.password=98765
 spring.jpa.generate-ddl=false
 
 spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
 # create
 # none
 # update
