--- a/Lessons/src/social_network/src/main/resources/application.properties
+++ b/Lessons/src/social_network/src/main/resources/application.properties
@@ -19,4 +19,5 @@ spring.jpa.hibernate.ddl-auto=create
 
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.id.new_generator_mappings=true
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
         
