--- a/Lessons/src/social_network/build.gradle
+++ b/Lessons/src/social_network/build.gradle
@@ -22,7 +22,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.flywaydb:flyway-core'
-	compileOnly 'org.projectlombok:lombok'
+    implementation 'org.jetbrains:annotations:19.0.0'
+    compileOnly 'org.projectlombok:lombok'
 
 	compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.12.0-rc1'
 	runtimeOnly 'org.postgresql:postgresql'
