--- a/Lessons/src/social_network/src/main/resources/application.properties
+++ b/Lessons/src/social_network/src/main/resources/application.properties
@@ -11,13 +11,13 @@ spring.datasource.username=postgres
 spring.datasource.password=98765
 spring.jpa.generate-ddl=false
 
-spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql = false
+spring.jpa.hibernate.ddl-auto=validate
 # create
 # none
 # update
 
-spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
+#spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.id.new_generator_mappings=true
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
         
