Добавлено: Тесты (не работают)

--- a/Lessons/src/social_network/build.gradle
+++ b/Lessons/src/social_network/build.gradle
@@ -22,16 +22,25 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.flywaydb:flyway-core'
-    implementation 'org.jetbrains:annotations:19.0.0'
-    compileOnly 'org.projectlombok:lombok'
+	implementation 'org.jetbrains:annotations:19.0.0'
+	compileOnly 'org.projectlombok:lombok'
 
 	compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.12.0-rc1'
 	runtimeOnly 'org.postgresql:postgresql'
 	runtimeOnly 'mysql:mysql-connector-java'
 	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation('org.springframework.boot:spring-boot-starter-test') {
-		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-	}
+//	testImplementation('org.springframework.boot:spring-boot-starter-test') {
+//		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+//	}
+
+	compile group: 'org.springframework.boot', name: 'spring-boot-starter'
+	testImplementation('org.junit.jupiter:junit-jupiter-api:5.2.0')
+	testCompile('org.junit.jupiter:junit-jupiter-params:5.2.0')
+	testRuntime('org.junit.jupiter:junit-jupiter-engine:5.2.0')
+	testCompile "org.mockito:mockito-core:2.+"
+	testCompile('org.mockito:mockito-junit-jupiter:2.18.3')
+	testCompile('org.springframework.boot:spring-boot-starter-test')
+
 }
 
 test {
