--- a/Lessons/src/social_network/src/main/resources/application.properties
+++ b/Lessons/src/social_network/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.datasource.password=98765
 spring.jpa.generate-ddl=false
 
 spring.jpa.show-sql = false
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create
 # create
 # none
 # update
